# stm8flash

./: .clang-format  .gitignore  INSTALL  LICENSE-CHANGE  Makefile  Makefile.in  README.md  autodetect.c  autodetect.h  autogen.sh  byte_utils.c  byte_utils.h  config.h.in  configure  configure.ac  dat.py  error.h  espstlink.c  espstlink.h  ihex.c  ihex.h  libespstlink.c  libespstlink.h  main.c  makefile  pgm.h  srec.c  srec.h  stlink.c  stlink.h  stlinkv2.c  stlinkv2.h  stm8.c  stm8.h  stm8flash  try.h  utils.h
.github/workflows/: build.yml  makefile.yml
include/: byte_utils.h  error.h  espstlink.h  stlinkv2.h  stm8.h
src/: Makefile  Makefile.am  Makefile.in  adapter.h  binary.c  binary.h  error.h  ihex.c  ihex.h  main.c  parts-db.c  pgm.h  region.c  region.h  srec.c  srec.h  stlink.c  stlink.h  stlinkv2.c  stm8.c  stm8.h  swim.h  utils.h  xgetopt.h
